--- a/packages/gatsby/package.json
+++ b/packages/gatsby/package.json
@@ -87,7 +87,7 @@
     "gatsby-parcel-config": "^0.4.0-next.0",
     "gatsby-plugin-page-creator": "^4.13.0-next.0",
     "gatsby-plugin-typescript": "^4.13.0-next.0",
-    "gatsby-plugin-utils": "^3.7.0-next.0",
+    "gatsby-plugin-utils": "3.7.0-alpha-image-cdn-telemetry.29",
     "gatsby-react-router-scroll": "^5.13.0-next.0",
     "gatsby-telemetry": "^3.13.0-next.0",
     "gatsby-worker": "^1.13.0-next.0",
