--- a/packages/gatsby-plugin-gatsby-cloud/.babelrc
+++ b/packages/gatsby-plugin-gatsby-cloud/.babelrc
@@ -2,8 +2,9 @@
   "presets": [["babel-preset-gatsby-package"]],
   "overrides": [
     {
-      "test": ["**/src/gatsby-browser.js"],
-      "presets": [["babel-preset-gatsby-package", { "browser": true, "esm": true }]]
+      "presets": [
+        ["babel-preset-gatsby-package", { "browser": true, "esm": true }]
+      ]
     }
   ]
 }
